--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -10,27 +10,20 @@
             <a class="nav-link active" aria-current="page" (click)='home()'>Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/inventario">inventario</a>
+            <a class="nav-link" (click)='inventario()'>inventario</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Perfil
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+              <li><a class="dropdown-item" href="#">Ver carrito</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrrar sesion</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Link</a>
-          </li>
         </ul>
-        <form class="d-flex">
-          <button class="btn-carrito" type="button">Ver carrito</button>
-          <button class="btn btn-danger" type="button" (click)="cerrarSesion()">Cerrar sesion</button>
-        </form>
       </div>
     </div>
   </nav>
