--- a/src/app/Components/agregar-dulce/agregar-dulce.component.html
+++ b/src/app/Components/agregar-dulce/agregar-dulce.component.html
@@ -22,6 +22,10 @@
         </select>
     </div>
     <div class="form-group">
+        <label for="exampleFormControlFile1">Example file input</label>
+        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+      </div>
+    <div class="form-group">
         <button type="submit" class="btn btn-primary" (click)="registrar()">Registrar</button>
         <button type="button" class="btn btn-danger" (click)="cancelar()">Cancelar</button>
     </div>
