--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -3,6 +3,8 @@
         <div class="expositor" type="button" (click)="agregar(dulce)">      
             <td>{{dulce.nombre}}</td>
             <br>
+            <img src={{dulce.imagen}}>
+            <br>
             <td>{{dulce.costo}}</td>
         </div>      
     </tr>
