--- a/src/app/Components/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/Components/iniciar-sesion/iniciar-sesion.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="buscar(Cliente.nombre, Cliente.contra)">
+<!--<form (ngSubmit)="buscar(Cliente.nombre, Cliente.contra)">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
         <input type="text" class="form-control" name="txt-Nombre" id="txtNombre" placeholder="Ingrese su nombre" [(ngModel)]="Cliente.nombre">
@@ -13,3 +13,46 @@
         <input type="button" value="Cancelar" class="btn btn-danger" (click)='cancelar()'>
     </div>
 </form>
+-->
+<body>
+<div class="container" id="container">
+    <div class="form-container sign-up-container">
+        <form action="#">
+            <h1>Create Account</h1>
+            <span>Use your email for registration</span>
+            <input type="text" placeholder="Name" [(ngModel)]="Cliente.nombre" name="nombre" />
+            <input type="email" placeholder="Email" [(ngModel)]="Cliente.email" name="email" />
+            <input type="password" placeholder="Password" [(ngModel)]="Cliente.contra" name="contra" />
+            <button (click)="registrar(Cliente)">Sign Up</button>
+        </form>
+    </div>
+
+    <div class="form-container sign-in-container">
+        <form action="#">
+            <h1>Sign in</h1>
+            <span>Use your account</span>
+            <input type="text" placeholder="Nombre" [(ngModel)]="Cliente.nombre" name="nombre" />
+            <input type="password" placeholder="Password" [(ngModel)]="Cliente.contra" name="contra" />
+            <button (click)="buscar(Cliente.nombre,Cliente.contra)">Sign In</button>
+        </form>
+    </div>
+
+    <div class="overlay-container">
+        <div class="overlay">
+            <div class="overlay-panel overlay-left">
+                <h1>Welcome Back!</h1>
+                <p>To keep connected with us please login with your personal info</p>
+                <button class="ghost" id="signIn">Sign In</button>
+            </div>
+            <div class="overlay-panel overlay-right">
+                <h1>Hello, Friend!</h1>
+                <p>Enter your personal details and start journey with us</p>
+                <button class="ghost" id="signUp">Sign Up</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+</body>
