--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,8 +1,6 @@
 
 <div >
     <div class="container">
-        <input type="button" value="Iniciar sesion" class="btn1" (click)="iniciar()">
-        <br>
-        <input type="button" value="Registrarse" class="btn1" (click)="registro()">
+        <input type="button" value="Ingresar" class="btn1" (click)="iniciar()">
     </div>
 </div>
