--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -10,31 +10,33 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" (click)='home()'>Home</a>
         </li>
-        <div *ngIf="revizarAdmin()">
+        <div *ngIf="revizarAdmin() else elseBlock2">
           <li class="nav-item">
-            <a class="nav-link" (click)='inventario()'>inventario</a>
-          </li>
+            <a class="nav-link" (click)="cerrarSesion()">Cerrar sesion</a>
+          </li>     
         </div>
-        <div *ngIf="revizar() else elseBlock">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Perfil
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="#">Ver perfil</a></li>
-              <li><a class="dropdown-item" href="#">Ver carrito</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrrar sesion</a></li>
-            </ul>
-          </li>
-        </div>
+        <ng-template #elseBlock2>
+          <div *ngIf="revizar() else elseBlock">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Perfil
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" (click)="perfil()">Ver perfil</a></li>
+                <li><a class="dropdown-item" (click)="carrito()">Ver carrito</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesion</a></li>
+              </ul>
+            </li>
+          </div>
+          <ng-template #elseBlock>
+            <button class="btn btn-danger  my-2 my-lg-0" (click)='Inicio()'>Ingresar</button>
+          </ng-template>
+        </ng-template>
       </ul>
-      <ng-template #elseBlock>
-          <button class="btn btn-danger  my-2 my-lg-0" (click)='Inicio()'>Ingresar</button>
-      </ng-template>
     </div>
   </div>
 </nav>
