--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-    <tr *ngFor="let dulce of inventario" >
-        <div class="expositor" type="button" (click)="agregar(dulce)">      
-            <td>{{dulce.nombre}}</td>
-            <br>
-            <img src={{dulce.imagen}}>
-            <br>
-            <td>{{dulce.costo}}</td>
-        </div>      
+    <tr *ngFor="let dulce of inventario">
+        <div *ngIf="dulce.cantidad>0">
+            <div class="expositor" type="button" (click)="agregar(dulce)">
+                <td>{{dulce.nombre}}</td>
+                <br>
+                <img src={{dulce.imagen}}>
+                <br>
+                <td>{{dulce.costo}}</td>
+            </div>
+        </div>
     </tr>
 </div>
