--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -9,8 +9,11 @@
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" (click)='home()'>Home</a>
-        </li>
+        </li>      
         <div *ngIf="revizarAdmin() else elseBlock2">
+          <li class="nav-item">
+            <a class="nav-link" (click)="inventario()">Inventario</a>
+          </li> 
           <li class="nav-item">
             <a class="nav-link" (click)="cerrarSesion()">Cerrar sesion</a>
           </li>     
