--- a/src/app/Components/la-factura/la-factura.component.html
+++ b/src/app/Components/la-factura/la-factura.component.html
@@ -19,4 +19,4 @@
     </div>
 </div>
 <br>
-<button type="button" value="Detalles" (click)="volver()"></button>
+<button type="button" value="Detalles" (click)="volver()">Volver</button>
