--- a/src/app/Components/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/Components/iniciar-sesion/iniciar-sesion.component.html
@@ -7,12 +7,12 @@
         <div class="login-form">
             <div class="sign-in-htm">
                 <div class="group">
-                    <label for="user" class="label" [(ngModel)]="Cliente.nombre" name="nombre">Username</label>
-                    <input id="user" type="text" class="input">
+                    <label for="user" class="label" name="nombre">Username</label>
+                    <input id="userI" type="text" class="input" [(ngModel)]="Cliente.nombre" name="nombre" >
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Password</label>
-                    <input id="pass" type="password" class="input" data-type="password" [(ngModel)]="Cliente.contra" name="contra">
+                    <input id="passI" type="password" class="input" data-type="password" [(ngModel)]="Cliente.contra" name="contra">
                 </div>
                 <div class="hr"></div>
                 <div class="group">
@@ -24,15 +24,15 @@
             <div class="sign-up-htm">
                 <div class="group">
                     <label for="user" class="label">Username</label>
-                    <input id="user" type="text" class="input"  [(ngModel)]="Cliente.nombre" name="nombre">
+                    <input id="userU" type="text" class="input"  [(ngModel)]="Cliente.nombre" name="nombre">
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Password</label>
-                    <input id="pass" type="password" class="input" data-type="password"  [(ngModel)]="Cliente.contra" name="contra">
+                    <input id="passU" type="password" class="input" data-type="password"  [(ngModel)]="Cliente.contra" name="contra">
                 </div>
                 <div class="group">
-                    <label for="pass" class="label">Email Address</label>
-                    <input id="pass" type="text" class="input"  [(ngModel)]="Cliente.email" name="email">
+                    <label for="mail" class="label">Email Address</label>
+                    <input id="mailU" type="text" class="input"  [(ngModel)]="Cliente.email" name="email">
                 </div>
                 <div class="hr"></div>
                 <div class="group">
